# zaxiom

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  install.ps1  update.ps1
.github/workflows/: ci.yml
assets/fonts/: .gitkeep
config/: default.toml
docs/: architecture.md
run/: install.ps1  update.ps1
src/: app.rs  main.rs
src/ai/: anthropic.rs  cohere.rs  deepseek.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  perplexity.rs  provider.rs  xai.rs
src/commands/: ai.rs  mod.rs  registry.rs  tools.rs  traits.rs
src/commands/compress/: gunzip.rs  gzip.rs  mod.rs  tar_cmd.rs  unzip.rs  zip_cmd.rs
src/commands/files/: basename.rs  cat.rs  chmod.rs  cp.rs  dirname.rs  file_type.rs  ln.rs  mkdir.rs  mktemp.rs  mod.rs  mv.rs  nano.rs  readlink.rs  realpath.rs  rm.rs  stat.rs  touch.rs
src/commands/fun/: coffee.rs  cowsay.rs  fortune.rs  matrix.rs  mod.rs  pet.rs
src/commands/hash/: base64cmd.rs  blake3sum.rs  crc32.rs  md5sum.rs  mod.rs  sha1sum.rs  sha224sum.rs  sha256sum.rs  sha384sum.rs  sha512sum.rs  xxd.rs
src/config/: aliases.rs  env.rs  mod.rs  settings.rs  theme.rs
src/git/: mod.rs  prompt.rs  shortcuts.rs
src/mascot/: mod.rs
src/pty/: buffer.rs  grid.rs  input.rs  mod.rs  session.rs
src/shell/: executor.rs  mod.rs  parser.rs  pipeline.rs
src/terminal/: ansi.rs  autocomplete.rs  buffer.rs  format.rs  fuzzy.rs  hints.rs  history.rs  img.rs  input.rs  mod.rs  palette.rs  project.rs  render.rs  session.rs  smart_history.rs  split.rs  state.rs  syntax.rs  vi_mode.rs
(+83 files in other folders)
